# main.py
@@ -1,3 +1,5 @@
+# What are the 5 best hotels in Lake Como, Lombardy, Italy that have at least 3 rooms available June 22-25 for under $2,000 per room per night.
+
 import os
 import json
 
@@ -7,6 +9,15 @@ from quart import request
 import requests
 from bs4 import BeautifulSoup
 import openai
+import selenium
+from selenium import webdriver
+from selenium.webdriver.common.by import By
+from selenium.webdriver.chrome.options import Options
+
+chrome_options = Options()
+chrome_options.add_argument('--no-sandbox')
+chrome_options.add_argument('--disable-dev-shm-usage')
+#chrome_options.headless = True
 
 OPENAI_API_KEY = os.environ['OPENAI_API_KEY']
 
@@ -17,19 +28,8 @@ openai.api_key = OPENAI_API_KEY
 app = quart_cors.cors(quart.Quart(__name__),
                       allow_origin="https://chat.openai.com")
 
-#_TODOS = {}
-
 
 def try_selenium(url, keyboard_form_values, click_actions):
-  import selenium
-  from selenium import webdriver
-  from selenium.webdriver.common.by import By
-  from selenium.webdriver.chrome.options import Options
-  chrome_options = Options()
-  chrome_options.add_argument('--no-sandbox')
-  chrome_options.add_argument('--disable-dev-shm-usage')
-  #chrome_options.headless = True
-
   driver = webdriver.Chrome(options=chrome_options)
 
   driver.get(url)
@@ -44,7 +44,7 @@ def try_selenium(url, keyboard_form_values, click_actions):
       pass
 
   for action in click_actions:
-    element = driver.find_element(by=By.PARTIAL_LINK_TEXT, value=action)
+    element = driver.find_element(by=By.PARTIAL_LINK_TEXT, value=action['action_description'])
     if element:
       element.click()
 
@@ -54,7 +54,8 @@ def try_selenium(url, keyboard_form_values, click_actions):
   return source
 
 
-try_selenium("https://google.com", [("search", "this is my google search")], "search")
+#try_selenium("https://google.com", [("search", "this is my google search")], "search")
+# try_selenium("https://reservations.belvederebellagio.com/107984?languageid=1", [("search", "this is my google search")], "search")
 
 
 def ask_chatgpt(system_prompt, user_prompt):
@@ -115,6 +116,17 @@ def fetch_website(url):
 #                        status=200)
 
 
+def getHotelWebsite(hotel):
+  hotelWebsite = ask_chatgpt(
+    'You know every hotel\'s website.', 'What is the website for ' + hotel +
+    '? Format your response as JSON in this format: { "hotel_name": "My Hotel", "url": "https://www.myhotel.com/" }'
+  )
+  return json.loads(hotelWebsite)["url"]
+
+
+# print(getHotelWebsite("Hotel Belvedere"))
+
+
 def get_actions(soup):
   anchor_tags = soup.find_all('a')
   output = []
@@ -125,24 +137,72 @@ def get_actions(soup):
   return output
 
 
+def getBookingUrl(hotel):
+  print(f'hotel: {hotel}')
+  url = getHotelWebsite(hotel)
+  url = "https://www.belvederebellagio.com/en"
+  print(f'url: {url}')
+  website_html = fetch_website(url)
+  # print(f'website_text is {website_html[:300]}')
+
+  soup = BeautifulSoup(website_html, 'html.parser')
+  # The 'get_text' method removes all HTML tags and returns the text content
+  # website_text = soup.get_text()
+  # print(f'website_text is {website_text[:300]}')
+
+  available_actions = get_actions(soup)
+  # print(available_actions)
+
+  bookingUrl = ask_chatgpt(
+    'You have a list of urls and a description of what each url does: ' +
+    str(available_actions),
+    'Give me the most likely url that I can use to book. Format your response as JSON in this format: { "booking_url": "https://www.myhotel.com/book" }'
+  )
+  print(bookingUrl)
+  return json.loads(bookingUrl)["booking_url"]
+
+
+# url = "https://www.belvederebellagio.com/en"
+print(getBookingUrl("Hotel Belvedere"))
+
+
+def submitBookingForm(bookingUrl):
+  return
+
+
 @app.post("/website/<string:username>")
 async def get_website(username):
   request = await quart.request.get_json(force=True)
   url = request['url']
   print(f'url is {url}')
   website_html = fetch_website(url)
-  print(f'website_text is {website_html[:300]}')
+  # print(f'website_text is {website_html[:300]}')
 
   soup = BeautifulSoup(website_html, 'html.parser')
   # The 'get_text' method removes all HTML tags and returns the text content
   website_text = soup.get_text()
-  print(f'website_text is {website_text[:300]}')
+  # print(f'website_text is {website_text[:300]}')
 
   available_actions = get_actions(soup)
 
   return quart.Response(response=json.dumps({
     'summarized_html': website_text,
     'actions': available_actions
+  }),
+                        status=200,
+                        content_type='application/json')
+
+
+@app.post("/hotel/<string:username>")
+async def get_hotel_availability(username):
+  print(username)
+  request = await quart.request.get_json(force=True)
+  url = request['url']
+
+  bookingUrl = getBookingUrl(url)
+
+  return quart.Response(response=json.dumps({
+    'availability': bookingUrl,
   }),
                         status=200,
                         content_type='application/json')
